# Namma-Ooru-Taxi-App

./: notes.txt
BACKEND/: endpoints.md
BACKEND/PublicRidesBackend/: .env.example  .eslintignore  .eslintrc.js  .gitignore  APILIST.txt  LocationSchema.sql  README.md  cypress.config.js  main.js  nodemon.json  package.json  tmp_redis_test.js
BACKEND/PublicRidesBackend/Backup/: backup.py
BACKEND/PublicRidesBackend/Constants/: CancelReasons.js  DevApi.js  DeviceTypes.js  Geofence.js  GroupUserRole.js  InvoiceConfig.js
BACKEND/PublicRidesBackend/Controllers/: Controller.js  (+2 more)
BACKEND/PublicRidesBackend/ThirdPartyServices/location_analyzer/: Cargo.toml  README.md  map_matching_payload.txt  test.py
BACKEND/PublicRidesBackend/ThirdPartyServices/location_analyzer/src/: database_client.rs  main.rs  mongo_client.rs  testmapmatching.py  utils.rs
BACKEND/PublicRidesBackend/ThirdPartyServices/location_analyzer/src/controllers/: location_encoder.rs  map_matching.rs  mod.rs
BACKEND/PublicRidesBackend/ThirdPartyServices/location_analyzer/src/models/: activity.rs  distance.rs  location copy.rs  location.rs  mod.rs  session.rs
PublicCustomerApp/: .eslintrc.js  .gitignore  .prettierrc.js  App.js  README.md  babel.config.js  eslint.config.mjs  firebaseConfig.js  index.js  jest.config.js  metro.config.js  package-lock.json  package.json  stack.txt
PublicCustomerApp/android/: build.gradle  gradle.properties  settings.gradle
PublicCustomerApp/ios/: Podfile
PublicCustomerApp/patches/: react-native-alert-notification+0.4.2.patch
PublicCustomerApp/src/: MainApp.js  shim.js
(+864 files in other folders)
