[package]
name = "location_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1","with-chrono-0_4"] }
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["v4"] } # Adjust the version as needed
lz4_flex = { version = "0.11", default-features = false }
rmp-serde = "0.15"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13.0"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
polyline = "0.5"
serde_json = "1.0"
geoutils = "0.5.1"

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]